@@ -12,9 +12,11 @@ use File::Temp qw(tempdir);
 
 plan skip_all => "No cpanm" unless which('cpanm');
 
+local $ENV{PERL_CPANM_OPT} = '--no-man-pages --no-prompt --no-interactive';
+
 my $tmp = tempdir(CLEANUP => 1);
 is(system("cpanm --notest -l $tmp ."), 0);
-for (qw(Monoceros Plack)) {
+for (qw(Monoceros Plack POSIX::getpeername Starman Dancer2)) {
     is(system("cpanm -l $tmp --reinstall $_"), 0, $_);
 }
 
