@@ -2,6 +2,11 @@ Revision history for Perl extension Test::TCP
 
 {{$NEXT}}
 
+    [INCOMPATIBLE CHANGES]
+    - Change wait_port() API to take max_wait seconds, and wait exponentially.
+      Dropped wait_port_retry argument introduced at 1.27.
+      (miyagawa)
+
 1.30 2013-06-03T05:06:28Z
 
     - Increase the default sleep and retry: 0.01 sec and 1000 times
